feat: adiciona dependências e atualiza documentação para utilizar Google Auth

--- a/api/.env.example
+++ b/api/.env.example
@@ -6,3 +6,6 @@ MONGO_ATLAS_DB_NAME=
 
 # Opção de configuração do Mongo pela url do servidor
 MONGO_DATABASE_URL=
+
+# Configuração do Google oAuth
+GOOGLE_AUTH_CLIENT_ID=
