--- a/api/.env.example
+++ b/api/.env.example
@@ -11,3 +11,5 @@ MONGO_DATABASE_URL=
 
 # Configuração do Google oAuth
 GOOGLE_AUTH_CLIENT_ID=
+# GOOGLE_AUTH_CLIENT_SECRET_JSON=
+GOOGLE_AUTH_REDIRECT_URI=
